HelloUltraviolet/Fixtures/RejectedSource/FFI/BoundaryUnwindingDiagnosticOwnership/Expected.uv
//! Expected diagnostic metadata for the BoundaryUnwindingDiagnosticOwnership rejected-source specimen.

expectedDiagnostic("E-SYS-3356", "diagnostics.23.BoundaryUnwindingDiagnosticOwnership")
